--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body style="body">
+  <body class="body">
     <p>insert links here lol</p>
   </body>
 </html>
