--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
   </head>
   <body class="body">
     <p>insert links here lol</p>
+    <div style="position: absolute; bottom: 5px; background-color: rgb(15, 179, 255);">
+      <a href="https://github.com/cybersteve547/links">Github</a>
+    </div>
   </body>
 </html>
