--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body class="body">
     <p>insert links here lol</p>
     <div class="footer">
-      <p>aaaaa <a href="https://github.com/cybersteve547/links">Github</a><\p>
+      <p>aaaaa <a href="https://github.com/cybersteve547/links">Github</a></p>
     </div>
   </body>
 </html>
