--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="body">
-    <p>insert links here lol</p>
+    <h1 id="notice"></h1>
     <div class="footer">
       <a href="https://github.com/cybersteve547/links"><p>Github</p></a>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
