--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="body">
-    <h1 id="notice"></h1>
+    <h1 id="notice">uh oh js isnt working</h1>
     <div class="footer">
       <a href="https://github.com/cybersteve547/links"><p>Github</p></a>
     </div>
