--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="body">
-    <h1 id="notice">uh oh js isnt working</h1>
+    <h1 id="notice" style="text">uh oh js isnt working</h1>
     <div class="footer">
-      <a href="https://github.com/cybersteve547/links"><p>Github</p></a>
+      <a href="https://github.com/cybersteve547/links" style="text">Github</a>
     </div>
     <script src="script.js"></script>
   </body>
