--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <div class="footer">
       <a href="https://github.com/cybersteve547/links" class="text">Github</a>
     </div>
+    <div class="item">
+      <a class="text">link here</a>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
