--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body class="body">
     <h1 id="notice" class="text">uh oh js isnt working</h1>
     <div class="footer">
-      <a href="https://github.com/cybersteve547/links" class="text">Github</a>
+      <a href="https://github.com/cybersteve547/links"><img src="images/github-fill"></a>
     </div>
     <div class="item">
       <a class="text">link here</a>
